--- a/test/index.html
+++ b/test/index.html
@@ -29,6 +29,6 @@
         </div>
     </div>
 
-    <script src="./app.js" type="module"></script>
+    <script src="./app.js" type="module" defer></script>
 </body>
 </html>
